--- a/projects/common/src/lib/shared/components/avatar/avatar.component.html
+++ b/projects/common/src/lib/shared/components/avatar/avatar.component.html
@@ -3,6 +3,6 @@
   @if (user()?.pictureUrl) {
     <img class="picture" [alt]="user()?.fullName" [src]="user()?.pictureUrl">
   } @else {
-    <span class="name-picture" [style.background-color]="getRandomColor()" >{{ firstLetterOfName }}</span>
+    <span class="name-picture" [style.background-color]="randomColor" >{{ firstLetterOfName }}</span>
   }
 </div>
