--- a/projects/common/src/lib/shared/components/authentication/register/register.component.scss
+++ b/projects/common/src/lib/shared/components/authentication/register/register.component.scss
@@ -1,4 +1,4 @@
-@use "variables.scss" as *;
+@use 'variables.scss' as *;
 
 .login-header {
   text-align: center;
@@ -35,7 +35,7 @@
 }
 
 .footer-divider-item {
-  flex: 1
+  flex: 1;
 }
 
 .footer-sign-up {
@@ -50,4 +50,3 @@
 .or-text {
   text-align: center;
 }
-
