--- a/projects/common/src/lib/shared/components/avatar/avatar.component.scss
+++ b/projects/common/src/lib/shared/components/avatar/avatar.component.scss
@@ -3,19 +3,19 @@
   --medium: 40px;
   --large: 48px;
 
-  --picture-size: var(--medium)
+  --picture-size: var(--medium);
 }
 
 .small {
-  --picture-size: var(--small)
+  --picture-size: var(--small);
 }
 
 .large {
-  --picture-size: var(--large)
+  --picture-size: var(--large);
 }
 
 .medium {
-  --picture-size: var(--medium)
+  --picture-size: var(--medium);
 }
 
 .wrapper {
