--- a/projects/common/src/lib/shared/theme/styles.scss
+++ b/projects/common/src/lib/shared/theme/styles.scss
@@ -1,5 +1,5 @@
-@import "./variables.scss";
-@import "./utils.scss";
-@import "./custom-theme.scss";
-@import "./custom-components/index.scss";
-@import "./reset.scss"
+@import './variables.scss';
+@import './utils.scss';
+@import './custom-theme.scss';
+@import './custom-components/index.scss';
+@import './reset.scss';
