--- a/projects/common/src/lib/shared/theme/custom-components/index.scss
+++ b/projects/common/src/lib/shared/theme/custom-components/index.scss
@@ -1,5 +1,5 @@
-@import '../variables.scss';
-@import './mat-input.scss';
-@import './skeleton.scss';
-@import './loader.scss';
-@import './snackbar.scss';
+@import '../variables';
+@import './mat-input';
+@import './skeleton';
+@import './loader';
+@import './snackbar';
