Add search component, build basic UI for header

--- a/projects/common/src/lib/shared/components/inputs/input/input.component.html
+++ b/projects/common/src/lib/shared/components/inputs/input/input.component.html
@@ -9,6 +9,9 @@
       [autocomplete]="autocomplete()"
       (change)="onChange($event)"
     />
+    @if (type() === "search") {
+      <mat-icon matPrefix>search</mat-icon>
+    }
     <mat-error>
       <knc-form-control-validation-message [control]="formControl" />
     </mat-error>
