--- a/projects/common/src/lib/shared/layouts/app-layout/header/header.component.scss
+++ b/projects/common/src/lib/shared/layouts/app-layout/header/header.component.scss
@@ -1,4 +1,5 @@
 @use "variables" as *;
+@use '@angular/material' as mat;
 
 .wrapper {
   border-bottom: 1px solid var(--gray-color-200);
@@ -20,8 +21,11 @@
 }
 
 .second-section {
+  @include mat.icon-button-density(-1);
+
   display: flex;
   flex-direction: row;
   gap: 12px;
   align-items: center;
 }
+
