Add signup button

--- a/projects/common/src/lib/shared/layouts/app-layout/header/header.component.html
+++ b/projects/common/src/lib/shared/layouts/app-layout/header/header.component.html
@@ -16,6 +16,7 @@
         <knc-user-options></knc-user-options>
       }@else {
         <button (click)="onSignIn()" mat-button color="primary" type="button">Sign in</button>
+        <button (click)="onSignUp()" mat-stroked-button color="primary" type="button">Sign up</button>
       }
     </section>
   </div>
