--- a/projects/common/src/lib/shared/layouts/app-layout/header/header.component.scss
+++ b/projects/common/src/lib/shared/layouts/app-layout/header/header.component.scss
@@ -21,10 +21,26 @@
 }
 
 .second-section {
-  @include mat.icon-button-density(-1);
+  @include mat.icon-button-density(-2);
 
   display: flex;
   flex-direction: row;
   gap: 12px;
   align-items: center;
+}
+
+.loading {
+  display: flex;
+  width: 183px;
+  flex-direction: row;
+  gap: 12px;
+}
+
+.loading-text {
+  flex: 1;
+}
+
+.loading-avatar {
+  width: 40px;
+  height: 40px;
 }
