--- a/projects/common/src/lib/shared/layouts/app-layout/header/header.component.html
+++ b/projects/common/src/lib/shared/layouts/app-layout/header/header.component.html
@@ -5,6 +5,7 @@
     </section>
     <section class="second-section">
       <knc-global-search></knc-global-search>
+      <knc-theme-settings></knc-theme-settings>
       @if (!isCurrentUserFetching()) {
         @if (isAuthorized()) {
           <button mat-button disableRipple type="button">
