--- a/projects/common/src/lib/shared/layouts/app-layout/header/theme-settings/theme-settings.component.html
+++ b/projects/common/src/lib/shared/layouts/app-layout/header/theme-settings/theme-settings.component.html
@@ -1,4 +1,4 @@
-<button [matMenuTriggerFor]="menu" mat-icon-button color="primary" type="button">
+<button matTooltip="Switch theme" [matMenuTriggerFor]="menu" mat-icon-button color="primary" type="button">
   <mat-icon>palette</mat-icon>
 </button>
 <mat-menu #menu="matMenu" xPosition="before">
