Add new blog page

--- a/projects/web/src/app/app.component.html
+++ b/projects/web/src/app/app.component.html
@@ -1,3 +1,5 @@
 <knc-theme-provider>
-  <router-outlet></router-outlet>
+  <knc-app-layout>
+    <router-outlet></router-outlet>
+  </knc-app-layout>
 </knc-theme-provider>
