Complete base feature of editor

--- a/projects/common/src/lib/shared/components/authentication/login/login.component.html
+++ b/projects/common/src/lib/shared/components/authentication/login/login.component.html
@@ -20,7 +20,7 @@
     </ng-container>
     <ng-container slot="footer">
       <section class="footer-wrapper">
-        <button color="primary" [kncLoading]="isLoading()" mat-raised-button class="submit-button" mat-button
+        <button color="primary" [kncLoading]="isLoading()" mat-raised-button class="submit-button"
           type="submit">
           Sign In
         </button>
