--- a/projects/common/src/lib/shared/theme/custom-components/editor.scss
+++ b/projects/common/src/lib/shared/theme/custom-components/editor.scss
@@ -4,3 +4,7 @@
   padding: 8px !important;
   border: 1px solid rgba(0, 0, 0, 0.42) !important;
 }
+
+.NgxEditor__Content {
+  min-height: inherit;
+}
