Custom editor toolbar

--- a/projects/web/src/app/features/blogs/new-blog/new-blog.component.html
+++ b/projects/web/src/app/features/blogs/new-blog/new-blog.component.html
@@ -4,7 +4,7 @@
   </knc-label>
   @if (editor) {
     <ngx-editor-menu [toolbar]="toolbar" [editor]="editor" />
-    <ngx-editor class="editor" [editor]="editor" formControlName="content" [placeholder]="'Type here...'"></ngx-editor>
+    <ngx-editor class="editor" [editor]="editor" formControlName="content" placeholder="Your great blog here"></ngx-editor>
     <ngx-editor-floating-menu [editor]="editor"></ngx-editor-floating-menu>
   }
   <div class="actions">
