Remove redundant import

--- a/projects/common/src/lib/shared/components/editor/editor.component.html
+++ b/projects/common/src/lib/shared/components/editor/editor.component.html
@@ -1,1 +1,1 @@
-<quill-editor class="editor" (onEditorCreated)="onEditorCreated($event)" (onEditorChanged)="onEditorChange($event)" [(ngModel)]="controlValue"></quill-editor>
+<quill-editor class="editor" (onEditorCreated)="onEditorCreated($event)" [(ngModel)]="controlValue"></quill-editor>
