Update usage of toggle oading state

--- a/projects/common/src/lib/shared/components/editor/editor.component.html
+++ b/projects/common/src/lib/shared/components/editor/editor.component.html
@@ -3,4 +3,7 @@
   [modules]="modules"
   (onEditorCreated)="onEditorCreated($event)"
   [(ngModel)]="controlValue"
+  [kncLoading]="imageUploaderModule.isUploadingImage()"
 ></quill-editor>
+
+{{imageUploaderModule.isUploadingImage()}}
