--- a/projects/common/src/lib/shared/layouts/app-layout/header/header.component.html
+++ b/projects/common/src/lib/shared/layouts/app-layout/header/header.component.html
@@ -17,7 +17,7 @@
           </button>
           <knc-user-options></knc-user-options>
         } @else {
-          <button (click)="onSignIn()" mat-button type="button">Sign in</button>
+          <button (click)="onSignIn()" mat-stroked-button type="button">Sign in</button>
           <button (click)="onSignUp()" mat-stroked-button type="button">Sign up</button>
         }
       } @else {
