Complte blog creation

--- a/projects/common/src/lib/shared/layouts/app-layout/header/header.component.html
+++ b/projects/common/src/lib/shared/layouts/app-layout/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="wrapper">
   <div class="header-container">
     <section class="first-section">
-      <p>KNBLOG</p>
+      <a [routerLink]="[routes.root.url]">KNBLOG</a>
     </section>
     <section class="second-section">
       <knc-global-search></knc-global-search>
