Change to container sm

--- a/projects/common/src/lib/shared/theme/utils.scss
+++ b/projects/common/src/lib/shared/theme/utils.scss
@@ -3,6 +3,13 @@
   max-width: 1200px;
   margin: auto;
 }
+
+.container-sm {
+  padding: 8px;
+  max-width: 900px;
+  margin: auto;
+}
+
 .mat-form-field-infix {
   width: auto !important;
 }
