--- a/projects/web/src/app/features/blogs/new-blog/new-blog.component.html
+++ b/projects/web/src/app/features/blogs/new-blog/new-blog.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="newBlogForm" class="wrapper container" (submit)="onSubmit()">
+<form [formGroup]="newBlogForm" class="wrapper container-sm" (submit)="onSubmit()">
   <knc-label label="Title" [isRequired]="true">
     <knc-input placeholder="Your Title" formControlName="title" name="blog-title"></knc-input>
   </knc-label>
