Add user view API call

--- a/projects/web/src/app/features/user-views/user-views.component.html
+++ b/projects/web/src/app/features/user-views/user-views.component.html
@@ -1,3 +1,9 @@
 <div class="container">
   <h1>For you</h1>
+
+  @if ({ page: blogsPage$ | async }; as data) {
+    @for (blog of data.page?.items; track blog.id) {
+      <div>{{ blog }}</div>
+    }
+  }
 </div>
