Fix image not put error

--- a/projects/common/src/lib/shared/components/editor/editor.component.html
+++ b/projects/common/src/lib/shared/components/editor/editor.component.html
@@ -2,6 +2,7 @@
   class="editor"
   [modules]="modules"
   (onEditorCreated)="onEditorCreated($event)"
+  (onEditorChanged)="onEditorChanged($event)"
   [(ngModel)]="controlValue"
   [kncLoading]="imageUploaderModule.isUploadingImage()"
 ></quill-editor>
