--- a/projects/common/src/lib/shared/theme/utils.scss
+++ b/projects/common/src/lib/shared/theme/utils.scss
@@ -13,3 +13,14 @@
 .mat-form-field-infix {
   width: auto !important;
 }
+
+
+.truncate-2 {
+	-webkit-line-clamp: 2;
+	line-clamp: 2;
+	-webkit-box-orient: vertical;
+	display: -webkit-box;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	word-break: break-all;
+}
