--- a/projects/common/src/lib/shared/theme/variables.scss
+++ b/projects/common/src/lib/shared/theme/variables.scss
@@ -10,6 +10,7 @@ $font-size-48: 3rem;
 $font-size-56: 3.5rem;
 
 $overlay-color: rgba(0, 0, 0, 1);
+$border-color: rgba(128, 128, 128, 0.265);
 
 $app-max-width: 1600px;
 
