--- a/projects/web/src/app/features/user-views/user-views.component.html
+++ b/projects/web/src/app/features/user-views/user-views.component.html
@@ -1,9 +1,16 @@
-<div class="container">
-  <h1>For you</h1>
+<div class="container wrapper">
+  <section class="left-section">
+    <h1>For you</h1>
+    <div class="blogs">
+      @if ({ page: blogsPage$ | async }; as data) {
+        @for (blog of data.page?.items; track blog.id) {
+          <knc-blog-preview [blog]="blog"></knc-blog-preview>
+        }
+      }
+    </div>
+  </section>
 
-  @if ({ page: blogsPage$ | async }; as data) {
-    @for (blog of data.page?.items; track blog.id) {
-      <div>{{ blog }}</div>
-    }
-  }
+  <section class="right-section">
+    <p>Filter section</p>
+  </section>
 </div>
