--- a/projects/common/src/lib/shared/components/label/label.component.html
+++ b/projects/common/src/lib/shared/components/label/label.component.html
@@ -1,5 +1,5 @@
 <label *ngIf="hasLabel(); else labelAsDivTemplate" class="wrapper">
-  @if (label() !== null) {
+  @if (label()) {
     <span class="label" [class.is-error]="(errors$ | async) !== null">
       {{ label() }}
       @if (isRequired()) {
@@ -11,7 +11,7 @@
 </label>
 
 <ng-template #labelAsDivTemplate>
-  @if (label() !== null && !hasLabel()) {
+  @if (label() && !hasLabel()) {
     <span class="title-medium">
       {{ label() }}
     </span>
@@ -21,4 +21,5 @@
 
 <ng-template #contentTemplate>
   <ng-content />
+  <knc-validation-message *ngIf="isErrorShown()" class="error" [errors]="errors$ | async"> </knc-validation-message>
 </ng-template>
