Complete homepage design

--- a/projects/web/src/app/features/user-views/user-views.component.html
+++ b/projects/web/src/app/features/user-views/user-views.component.html
@@ -22,5 +22,11 @@
         }
       }
     </div>
+
+    <div class="slogan">
+      <p>Write your dream with <b>KNBLOG</b></p>
+      <p class="sub-slogan">This is a self-edu project. No commercial purpose.</p>
+    </div>
+
   </section>
 </div>
